--- a/about me.html
+++ b/about me.html
@@ -86,7 +86,7 @@
             <p>I love <a href="music.html" style="color: #FFFFFF">music</a>!!</p>
             <p>I love <a href="clothing.html" style="color: #FFFFFF">dressing up</a>!!</p>
             <p>I love my friends!!</p>
-            <p>Oh, u don't care? It's fine, just go back to the <a href="homepage (1).html" style="color: #FFFFFF">homepage</a> i guess...</p>
+            <p>Oh, u don't care? It's fine, just go back to the <a href="index.html" style="color: #FFFFFF">homepage</a> i guess...</p>
     </div>
 
             <a class="apple2">
