--- a/ref.html
+++ b/ref.html
@@ -91,7 +91,7 @@ color: white;
 <body>
 
       <nav>
-        <a href="homepage (1).html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about me.html">Abt me</a>
         <a href="music.html">Music</a>
         <a href="clothing.html">Clothing</a>
